--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<div class="logo"><span class="icon fa-gem"></span></div>
+							<!-- <div class="logo"><span class="icon fa-gem"></span></div> -->
 							<h2>This is Solid State</h2>
-							<p>Another free + fully responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
+							<p>" Standing on a well-chilled cinder, we see the slow fading of the suns, and we try to recall the vanished brilliance of the origin of worlds."</p>
 						</div>
 					</section>
 
@@ -53,6 +53,7 @@
 					<section id="wrapper">
 
 						<!-- One -->
+						<!--
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
@@ -63,8 +64,10 @@
 									</div>
 								</div>
 							</section>
-
+						-->
+						
 						<!-- Two -->
+						<!--
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
@@ -75,8 +78,9 @@
 									</div>
 								</div>
 							</section>
-
+						-->
 						<!-- Three -->
+						<!--
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
@@ -87,7 +91,7 @@
 									</div>
 								</div>
 							</section>
-
+						-->
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
@@ -132,6 +136,7 @@
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
 							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+							<!--
 							<form method="post" action="#">
 								<div class="fields">
 									<div class="field">
@@ -151,6 +156,7 @@
 									<li><input type="submit" value="Send Message" /></li>
 								</ul>
 							</form>
+							-->
 							<ul class="contact">
 								<li class="icon solid fa-home">
 									Untitled Inc<br />
@@ -159,9 +165,11 @@
 								</li>
 								<li class="icon solid fa-phone">(000) 000-0000</li>
 								<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
+								<!--
 								<li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
 								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
 								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
+								-->
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
