--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Solid State by HTML5 UP</title>
+		<title>Szabolcs Kovács Academic Page</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Solid State</a></h1>
+						<h1><a href="index.html">Szabolcs Kovács</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -44,8 +44,8 @@
 					<section id="banner">
 						<div class="inner">
 							<!-- <div class="logo"><span class="icon fa-gem"></span></div> -->
-							<h2>This is Solid State</h2>
-							<p>" Standing on a well-chilled cinder, we see the slow fading of the suns, and we try to recall the vanished brilliance of the origin of worlds."</p>
+							<h2 class="major">" Standing on a well-chilled cinder, we see the slow fading of the suns, and we try to recall the vanished brilliance of the origin of worlds."</h2>
+							<p> - Lemaître</p>
 						</div>
 					</section>
 
@@ -123,9 +123,11 @@
 											<a href="#" class="special">Learn more</a>
 										</article>
 									</section>
+									<!--
 									<ul class="actions">
 										<li><a href="#" class="button">Browse All</a></li>
 									</ul>
+									-->
 								</div>
 							</section>
 
@@ -134,8 +136,10 @@
 				<!-- Footer -->
 					<section id="footer">
 						<div class="inner">
-							<h2 class="major">Get in touch</h2>
+							<h2 class="major">Contact</h2>
+							<!--
 							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+							-->
 							<!--
 							<form method="post" action="#">
 								<div class="fields">
@@ -159,12 +163,14 @@
 							-->
 							<ul class="contact">
 								<li class="icon solid fa-home">
-									Untitled Inc<br />
-									1234 Somewhere Road Suite #2894<br />
-									Nashville, TN 00000-0000
+									ELTE TTK<br />
+									Department of THeoretical Physics<br />
+									Room 6.101A
 								</li>
+								<!--
 								<li class="icon solid fa-phone">(000) 000-0000</li>
-								<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
+								-->
+								<li class="icon solid fa-envelope"><a href="#">szabolcs.kovacs.uni@gmail.com</a></li>
 								<!--
 								<li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
 								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
@@ -172,7 +178,7 @@
 								-->
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Hosted on GitHub Pages</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
