--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 					<section id="banner">
 						<div class="inner">
 							<!-- <div class="logo"><span class="icon fa-gem"></span></div> -->
-							<h2 class="major">" Standing on a well-chilled cinder, we see the slow fading of the suns, and we try to recall the vanished brilliance of the origin of worlds."</h2>
-							<p> - Lemaître</p>
+							<h3 class="major">" Standing on a well-chilled cinder, we see the slow fading of the suns, and we try to recall the vanished brilliance of the origin of worlds."</h3>
+							<p style="text-align: right;"> - Lemaître</p>
 						</div>
 					</section>
 
@@ -164,13 +164,33 @@
 							<ul class="contact">
 								<li class="icon solid fa-home">
 									ELTE TTK<br />
-									Department of THeoretical Physics<br />
+									Department of Theoretical Physics<br />
 									Room 6.101A
 								</li>
 								<!--
 								<li class="icon solid fa-phone">(000) 000-0000</li>
 								-->
-								<li class="icon solid fa-envelope"><a href="#">szabolcs.kovacs.uni@gmail.com</a></li>
+								<!--
+								<li class="icon solid fa-envelope"><a href="mailto:szabolcs.kovacs.uni@gmail.com">szabolcs.kovacs.uni@gmail.com</a></li>
+								-->
+								<!--
+								<li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
+								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
+								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
+								-->
+							</ul>
+							<ul class="contact">
+								<!--
+								<li class="icon solid fa-home">
+									ELTE TTK<br />
+									Department of Theoretical Physics<br />
+									Room 6.101A
+								</li>
+								-->
+								<!--
+								<li class="icon solid fa-phone">(000) 000-0000</li>
+								-->
+								<li class="icon solid fa-envelope"><a href="mailto:szabolcs.kovacs.uni@gmail.com">szabolcs.kovacs.uni@gmail.com</a></li>
 								<!--
 								<li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
 								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
