--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					<section id="banner">
 						<div class="inner">
 							<!-- <div class="logo"><span class="icon fa-gem"></span></div> -->
-							<h3 class="major">" Standing on a well-chilled cinder, we see the slow fading of the suns, and we try to recall the vanished brilliance of the origin of worlds."</h3>
+							<h2>" Standing on a well-chilled cinder, we see the slow fading of the suns, and we try to recall the vanished brilliance of the origin of worlds."</h2>
 							<p style="text-align: right;"> - Lemaître</p>
 						</div>
 					</section>
