--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 					<header id="header" class="alt">
 						<h1><a href="index.html">Szabolcs Kovács</a></h1>
 						<nav>
+							<a href="generic.html">Generic</a>
 							<a href="#menu">Menu</a>
 						</nav>
 					</header>
@@ -96,31 +97,21 @@
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
 									<h2 class="major">About</h2>
-									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+									<p>
+										I'm Szabolcs Kovács, a PhD student at ELTE's Department of Theoretical Physics. My main interests are scalar field cosmology, as well as gauge theory motivated extensions of the Standard Model and Einsteinian gravity.
+									</p>
 									<section class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<h3 class="major">Curriculum Vitae</h3>
+											<p>My CV and publications.</p>
+											<a href="#" class="special">Details</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3 class="major">Ante fermentum</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<h3 class="major">Fusce consequat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<h3 class="major">Teaching</h3>
+											<p>Classes taught by me.</p>
+											<a href="#" class="special">Details</a>
 										</article>
 									</section>
 									<!--
