--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<header id="header" class="alt">
 						<h1><a href="index.html">Szabolcs Kovács</a></h1>
 						<nav>
-							<a href="generic.html">Generic</a>
+							<a href=cv.html">CV</a>
 							<a href="#menu">Menu</a>
 						</nav>
 					</header>
@@ -105,7 +105,7 @@
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
 											<h3 class="major">Curriculum Vitae</h3>
 											<p>My CV and publications.</p>
-											<a href="#" class="special">Details</a>
+											<a href="cv.html" class="special">Details</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
