--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<header id="header" class="alt">
 						<h1><a href="index.html">Szabolcs Kovács</a></h1>
 						<nav>
-							<a href=cv.html">CV</a>
+							<a href="cv.html">CV</a>
 							<a href="#menu">Menu</a>
 						</nav>
 					</header>
