--- a/cv.html
+++ b/cv.html
@@ -19,9 +19,9 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">CV</a></h1>
+						<h1><a href="cv.html">CV</a></h1>
 						<nav>
-              <a href="index.html">Home</a>
+              						<a href="index.html">Home</a>
 						</nav>
 					</header>
 
