--- a/cv.html
+++ b/cv.html
@@ -18,12 +18,24 @@
 			<div id="page-wrapper">
 
 				<!-- Header -->
-					<header id="header">
-						<h1><a href="cv.html">CV</a></h1>
+					<header id="header" class="alt">
+						<h1><a href="index.html">Home</a></h1>
 						<nav>
-              						<a href="index.html">Home</a>
+							<a href="#menu">Menu</a>
 						</nav>
 					</header>
+
+				<!-- Menu -->
+					<nav id="menu">
+						<div class="inner">
+							<ul class="links">
+								<li><a href="index.html">Home</a></li>
+								<li><a href="cv.html">CV</a></li>
+								<li><a href="index.html">Teaching</a></li>
+							</ul>
+							<a href="#" class="close">Close</a>
+						</div>
+					</nav>
 
 
 				<!-- Wrapper -->
