--- a/index.html
+++ b/index.html
@@ -21,21 +21,17 @@
 					<header id="header" class="alt">
 						<h1><a href="index.html">Szabolcs Kovács</a></h1>
 						<nav>
-							<a href="cv.html">CV</a>
-							<a href="#menu">Menu</a>
+							<a href="#menu"></a>
 						</nav>
 					</header>
 
 				<!-- Menu -->
 					<nav id="menu">
 						<div class="inner">
-							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="elements.html">Elements</a></li>
-								<li><a href="#">Log In</a></li>
-								<li><a href="#">Sign Up</a></li>
+								<li><a href="cv.html">CV</a></li>
+								<li><a href="index.html">Teaching</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
