--- a/cv.html
+++ b/cv.html
@@ -46,84 +46,49 @@
 								<div class="inner">
 
 									<section>
-										<h3 class="major">Lists</h3>
+										<h3 class="major">Curriculum Vitae</h3>
 										<div class="row">
 											<div class="col-6 col-12-medium">
-												<h4>Unordered</h4>
-												<ul>
-													<li>Dolor pulvinar etiam.</li>
-													<li>Sagittis adipiscing.</li>
-													<li>Felis enim feugiat.</li>
-												</ul>
-												<h4>Alternate</h4>
-												<ul class="alt">
-													<li>Dolor pulvinar etiam.</li>
-													<li>Sagittis adipiscing.</li>
-													<li>Felis enim feugiat.</li>
-												</ul>
+												<h4>Szabolcs Kovács</h4>
+												<span class="image left"><img src="images/pic01.jpg" alt="" /></span>
+												<h4>Currently:</h4>
+												<p>ELTE TTK Doctoral School of Physics,</p>
+												<p>Particle and Nuclear Physics programme</p>
+												<p>2024-</p>
 											</div>
 											<div class="col-6 col-12-medium">
-												<h4>Ordered</h4>
-												<ol>
-													<li>Dolor pulvinar etiam.</li>
-													<li>Etiam vel felis viverra.</li>
-													<li>Felis enim feugiat.</li>
-													<li>Dolor pulvinar etiam.</li>
-													<li>Etiam vel felis lorem.</li>
-													<li>Felis enim et feugiat.</li>
-												</ol>
-												<h4>Icons</h4>
-												<ul class="icons">
-													<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-													<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-													<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-													<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-												</ul>
+												<h4>Publications</h4>
+												<span class="image left"><img src="images/pic02.jpg" alt="" /></span>
+												<p>If I had any...</p>
 											</div>
 										</div>
-										<h4>Actions</h4>
-										<div class="row">
-											<div class="col-6 col-12-medium">
-												<ul class="actions">
-													<li><a href="#" class="button primary">Default</a></li>
-													<li><a href="#" class="button">Default</a></li>
-												</ul>
-												<ul class="actions small">
-													<li><a href="#" class="button primary small">Small</a></li>
-													<li><a href="#" class="button small">Small</a></li>
-												</ul>
-												<ul class="actions stacked">
-													<li><a href="#" class="button primary">Default</a></li>
-													<li><a href="#" class="button">Default</a></li>
-												</ul>
-												<ul class="actions stacked small">
-													<li><a href="#" class="button primary small">Small</a></li>
-													<li><a href="#" class="button small">Small</a></li>
-												</ul>
+										<h4>Education</h4>
+											<div class="table-wrapper">
+												<table>
+													<thead>
+														<tr>
+															<th>Date</th>
+															<th>Institution</th>
+															<th>Degree</th>
+															<th>Grade</th>
+														</tr>
+													</thead>
+													<tbody>
+														<tr>
+															<td>2022-2024</td>
+															<td>ELTE TTK</td>
+															<td>Physics MSc</td>
+															<td>With honours</td>
+														</tr>
+														<tr>
+															<td>2018-2022</td>
+															<td>ELTE TTK</td>
+															<td>Physics BSc</td>
+															<td>Excellent</td>
+														</tr>
+													</tbody>
+												</table>
 											</div>
-											<div class="col-6 col-12-medium">
-												<ul class="actions stacked">
-													<li><a href="#" class="button primary fit">Default</a></li>
-													<li><a href="#" class="button fit">Default</a></li>
-												</ul>
-												<ul class="actions stacked small">
-													<li><a href="#" class="button primary small fit">Small</a></li>
-													<li><a href="#" class="button small fit">Small</a></li>
-												</ul>
-											</div>
-										</div>
-										<h4>Pagination</h4>
-										<ul class="pagination">
-											<li><span class="button small disabled">Prev</span></li>
-											<li><a href="#" class="page active">1</a></li>
-											<li><a href="#" class="page">2</a></li>
-											<li><a href="#" class="page">3</a></li>
-											<li><span>&hellip;</span></li>
-											<li><a href="#" class="page">8</a></li>
-											<li><a href="#" class="page">9</a></li>
-											<li><a href="#" class="page">10</a></li>
-											<li><a href="#" class="button small">Next</a></li>
-										</ul>
 									</section>
 
 									<section>
