--- a/cv.html
+++ b/cv.html
@@ -50,7 +50,7 @@
 										<div class="row">
 											<div class="col-6 col-12-medium">
 												<h4>Szabolcs Kovács</h4>
-												<div class="col-12"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
+												<div class="col-12"><span class="image fitless"><img src="images/pic01.jpg" alt="" /></span></div>
 												<h4>Currently:</h4>
 												<p>ELTE TTK Doctoral School of Physics,</p>
 												<p>Particle and Nuclear Physics programme</p>
@@ -58,7 +58,7 @@
 											</div>
 											<div class="col-6 col-12-medium">
 												<h4>Publications</h4>
-												<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
+												<div class="col-4"><span class="image fitless"><img src="images/pic02.jpg" alt="" /></span></div>
 												<p>If I had any...</p>
 											</div>
 										</div>
