--- a/cv.html
+++ b/cv.html
@@ -52,9 +52,9 @@
 												<h4>Szabolcs Kovács</h4>
 												<div class="col-12"><span class="image fitless"><img src="images/pic01.jpg" alt="" /></span></div>
 												<h4>Currently:</h4>
-												<p>ELTE TTK Doctoral School of Physics,</p>
-												<p>Particle and Nuclear Physics programme</p>
-												<p>2024-</p>
+												<p>ELTE TTK Doctoral School of Physics, <br>
+												Particle and Nuclear Physics programme <br>
+												2024-</p>
 											</div>
 											<div class="col-6 col-12-medium">
 												<h4>Publications</h4>
