--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 									</p>
 									<section class="features">
 										<article>
-											<a href="cv.html" class="image"><img src="images/pic04.jpg" alt="" /></a>
+											<a href="cv.html" class="image"><img src="images/me.jpg" alt="" /></a>
 											<h3 class="major">Curriculum Vitae</h3>
 											<p>My CV and publications.</p>
 											<a href="cv.html" class="special">Details</a>
