--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
 									</p>
 									<section class="features">
 										<article>
-											<a href="cv.html" class="image"><img src="images/me.jpg" alt="" /></a>
+											<a href="cv.html" class="image fitless"><img src="images/me.jpg" alt="" /></a>
 											<h3 class="major">Curriculum Vitae</h3>
 											<p>My CV and publications.</p>
 											<a href="cv.html" class="special">Details</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
+											<a href="#" class="image fitless"><img src="images/pic05.jpg" alt="" /></a>
 											<h3 class="major">Teaching</h3>
 											<p>Classes taught by me.</p>
 											<a href="#" class="special">Details</a>
