--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
 											<h3 class="major">Teaching</h3>
 											<p>Classes taught by me.</p>
 											<a href="#" class="special">Details</a>
-											<a href="#" class="image fitless"><img src="images/pic05.jpg" alt="" /></a>
+											<p></p>
+											<a href="#" class="image fitless"><img src="images/teaching.png" alt="" /></a>
 										</article>
 									</section>
 									<!--
