--- a/index.html
+++ b/index.html
@@ -98,7 +98,11 @@
 									</p>
 									<section class="features">
 										<article>
-											<a href="cv.html" class="image fitless"><img src="images/me.jpg" alt="" /></a>
+											<div class="col-4">
+												<a href="cv.html" class="image fitless">
+													<img src="images/me.jpg" alt="">
+												</a>
+											</div>
 											<h3 class="major">Curriculum Vitae</h3>
 											<p>My CV and publications.</p>
 											<a href="cv.html" class="special">Details</a>
@@ -107,8 +111,12 @@
 											<h3 class="major">Teaching</h3>
 											<p>Classes taught by me.</p>
 											<a href="#" class="special">Details</a>
-											<p> <br> <br> </p>
-											<a href="#" class="image fitless"><img src="images/teaching.png" alt="" /></a>
+											<pr></pr>
+											<div class="col-4">
+												<a href="teaching.html" class="image fitless">
+													<img src="images/teaching.png" alt="">
+												</a>
+											</div>
 										</article>
 									</section>
 									<!--
