--- a/cv.html
+++ b/cv.html
@@ -51,7 +51,6 @@
 											<div class="col-6 col-12-medium">
 												<h4>Szabolcs Kovács</h4>
 												<div class="col-12"><span class="image fitless"><img src="images/me.jpg" alt="" /></span></div>
-												<h4>Currently:</h4>
 												<p>ELTE TTK Doctoral School of Physics, <br>
 												Particle and Nuclear Physics programme <br>
 												2024-</p>
@@ -59,6 +58,10 @@
 											<div class="col-6 col-12-medium">
 												<h4>Publications</h4>
 												<div class="col-4"><span class="image fitless"><img src="images/publications.png" alt="" /></span></div>
+												<h4>Prizes</h4>
+												<ul>
+													<li>OTDK II. Prize (2025) (FiFöMa/Cosmology)</li>
+												</ul>
 											</div>
 										</div>
 										<h4>Education</h4>
