--- a/cv.html
+++ b/cv.html
@@ -51,9 +51,11 @@
 											<div class="col-6 col-12-medium">
 												<h4>Szabolcs Kovács</h4>
 												<div class="col-12"><span class="image fitless"><img src="images/me.jpg" alt="" /></span></div>
-												<p>ELTE TTK Doctoral School of Physics, <br>
-												Particle and Nuclear Physics programme <br>
-												2024-</p>
+												<p class="align-center">
+													ELTE TTK Doctoral School of Physics, <br>
+													Particle and Nuclear Physics programme <br>
+													2024-
+												</p>
 											</div>
 											<div class="col-6 col-12-medium">
 												<h4>Publications</h4>
