--- a/cv.html
+++ b/cv.html
@@ -49,7 +49,7 @@
 										<h3 class="major">Curriculum Vitae</h3>
 										<div class="row">
 											<div class="col-6 col-12-medium">
-												<h4>Szabolcs Kovács</h4>
+												<h4 class="align-center">Szabolcs Kovács</h4>
 												<div class="col-12"><span class="image fitless"><img src="images/me.jpg" alt="" /></span></div>
 												<p class="align-center">
 													ELTE TTK Doctoral School of Physics, <br>
