--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 								-->
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Hosted on GitHub Pages</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>Hosted on GitHub Pages</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Background: NASA, ESA, CSA, and STScI</li>
 							</ul>
 						</div>
 					</section>
