--- a/cv.html
+++ b/cv.html
@@ -48,7 +48,7 @@
 									<section>
 										<h3 class="major">
 											Curriculum Vitae
-											<a href="cv/CV_Szabolcs_Kovacs.pdf" download="CV_Szabolcs_Kovacs.pdf" class="button icon solid fa-download">Icon</a>
+											<a href="cv/CV_Szabolcs_Kovacs.pdf" download="CV_Szabolcs_Kovacs.pdf" class="button icon solid fa-download align-right">.PDF</a>
 										</h3>
 										<div class="row">
 											<div class="col-6 col-12-medium">
