--- a/cv.html
+++ b/cv.html
@@ -46,10 +46,10 @@
 								<div class="inner">
 
 									<section>
-										<h3 class="major">
-											Curriculum Vitae
-											<a href="cv/CV_Szabolcs_Kovacs.pdf" download="CV_Szabolcs_Kovacs.pdf" class="button icon solid fa-download align-right">.PDF</a>
-										</h3>
+										<div class="header-container">
+										    <h3 class="major">Curriculum Vitae</h3>
+										    <a href="cv/CV_Szabolcs_Kovacs.pdf" download="CV_Szabolcs_Kovacs.pdf" class="button icon solid fa-download align-right">.PDF</a>
+										</div>
 										<div class="row">
 											<div class="col-6 col-12-medium">
 												<h4 class="align-center">Szabolcs Kovács</h4>
