--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
 								<li><a href="cv.html">CV</a></li>
-								<li><a href="index.html">Teaching</a></li>
+								<li><a href="teaching.html">Teaching</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -110,7 +110,7 @@
 										<article>
 											<h3 class="major">Teaching</h3>
 											<p>Classes taught by me.</p>
-											<a href="#" class="special">Details</a>
+											<a href="teaching.html" class="special">Details</a>
 											<pr> <br> </pr>
 											<div class="col-4">
 												<a href="teaching.html" class="image fitless">
