--- a/teaching.html
+++ b/teaching.html
@@ -41,8 +41,8 @@
 					<section id="banner">
 						<div class="inner">
 							<!-- <div class="logo"><span class="icon fa-gem"></span></div> -->
-							<h2>" Standing on a well-chilled cinder, we see the slow fading of the suns, and we try to recall the vanished brilliance of the origin of worlds."</h2>
-							<p style="text-align: right;"> - Lemaître</p>
+							<h2>"The greater the difficulty, the more the glory in surmounting it."</h2>
+							<p style="text-align: right;"> - Epicurus</p>
 						</div>
 					</section>
 
@@ -53,9 +53,14 @@
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
 									<h2 class="major">Mandatory courses</h2>
-									<p>
-										This is where I'll list the mandatory courses!
-									</p>
+									<ul>
+										<li> <a href="teaching/elmecha.html">Theoretical mechanics (A) pratice (2025)</a></li>
+										<li>Theoretical mechanics (A) pratice (2024)</li>
+									</ul>
+									<h2 class="major">Elective courses</h2>
+									<ul>
+										<li> <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">In progress...</a></li>
+									</ul>
 								</div>
 							</section>
 
