--- a/teaching.html
+++ b/teaching.html
@@ -82,7 +82,7 @@
 								<li class="icon solid fa-envelope"><a href="mailto:szabolcs.kovacs.uni@gmail.com">szabolcs.kovacs.uni@gmail.com</a></li>
 							</ul>
 							<ul class="copyright">
-								<li>Hosted on GitHub Pages</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Background: NASA, ESA, CSA, and STScI</li>
+								<li>Hosted on GitHub Pages</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Background: teplovodoserviss from Wallpapers.com</li>
 							</ul>
 						</div>
 					</section>
