--- a/teaching/elmecha.html
+++ b/teaching/elmecha.html
@@ -9,8 +9,8 @@
 		<title>El.mecha.</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="../assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload subpage teachpage">
 
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Home</a></h1>
+						<h1><a href="../index.html">Home</a></h1>
 						<nav>
 							<a href="#menu"></a>
 						</nav>
@@ -29,9 +29,9 @@
 					<nav id="menu">
 						<div class="inner">
 							<ul class="links">
-								<li><a href="index.html">Home</a></li>
-								<li><a href="cv.html">CV</a></li>
-								<li><a href="index.html">Teaching</a></li>
+								<li><a href="../index.html">Home</a></li>
+								<li><a href="../cv.html">CV</a></li>
+								<li><a href="../index.html">Teaching</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
