--- a/teaching/elmecha.html
+++ b/teaching/elmecha.html
@@ -31,7 +31,7 @@
 							<ul class="links">
 								<li><a href="../index.html">Home</a></li>
 								<li><a href="../cv.html">CV</a></li>
-								<li><a href="../index.html">Teaching</a></li>
+								<li><a href="../teaching-hu.html">Oktatás</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -49,7 +49,7 @@
 									    <h2 class="major">
 										    Elméleti Mechanika (A) gyakorlat (2025)
 									    </h2>
-                        <p>Tartalom helye.</p>
+                        						<p>Tartalom helye.</p>
                     
 									</section>
 
