--- a/teaching-hu.html
+++ b/teaching-hu.html
@@ -31,8 +31,8 @@
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
 								<li><a href="cv.html">CV</a></li>
-								<li><a href="teaching.html">Oktatás</a></li>
-                						<li><a href="index.html">ENG</a></li>
+								<li><a href="teaching-hu.html">Oktatás</a></li>
+                						<li><a href="teaching.html">ENG</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
