--- a/teaching-hu.html
+++ b/teaching-hu.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Home</a></h1>
+						<h1><a href="index-hu.html">Home</a></h1>
 						<nav>
 							<a href="#menu"></a>
 						</nav>
@@ -29,8 +29,8 @@
 					<nav id="menu">
 						<div class="inner">
 							<ul class="links">
-								<li><a href="index.html">Home</a></li>
-								<li><a href="cv.html">CV</a></li>
+								<li><a href="index-hu.html">Home</a></li>
+								<li><a href="cv-hu.html">CV</a></li>
 								<li><a href="teaching-hu.html">Oktatás</a></li>
                 						<li><a href="teaching.html">ENG</a></li>
 							</ul>
