--- a/cv.html
+++ b/cv.html
@@ -31,7 +31,7 @@
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
 								<li><a href="cv.html">CV</a></li>
-								<li><a href="index.html">Teaching</a></li>
+								<li><a href="teaching.html">Teaching</a></li>
 								<li><a href="cv-hu.html">HUN</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
