--- a/index-hu.html
+++ b/index-hu.html
@@ -100,21 +100,21 @@
 									<section class="features">
 										<article>
 											<div class="col-4">
-												<a href="cv.html" class="image fitless">
+												<a href="cv-hu.html" class="image fitless">
 													<img src="images/me.jpg" alt="">
 												</a>
 											</div>
 											<h3 class="major">Curriculum Vitae</h3>
 											<p>Önéletrajz és publikációk.</p>
-											<a href="cv.html" class="special">Részletek</a>
+											<a href="cv-hu.html" class="special">Részletek</a>
 										</article>
 										<article>
 											<h3 class="major">Oktatás</h3>
 											<p>Tárgyak amiket oktatok.</p>
-											<a href="teaching.html" class="special">Részletek</a>
+											<a href="teaching-hu.html" class="special">Részletek</a>
 											<pr> <br> </pr>
 											<div class="col-4">
-												<a href="teaching.html" class="image fitless">
+												<a href="teaching-hu.html" class="image fitless">
 													<img src="images/teaching.png" alt="">
 												</a>
 											</div>
