--- a/teaching/elmecha.html
+++ b/teaching/elmecha.html
@@ -49,8 +49,26 @@
 									    <h2 class="major">
 										    Elméleti Mechanika (A) gyakorlat (2025)
 									    </h2>
-                        						<p>Tartalom helye.</p>
-                    
+									<details>
+									    <summary>Információk</summary>
+									    <p>Itt lesznek az infók, ha lesznek.</p>
+									</details>
+									<h3>Beadandók:</h3>
+									<ul>
+										<li><a href="/bead1.html">1. beadandó</a></li>
+										<li><a href="/szorg1.html">1. szorgalmi</a></li>
+										<li><a href="/bead2.html">2. beadandó</a></li>
+										<li><a href="/szorg2.html">2. szorgalmi</a></li>
+									</ul>
+									<h3>Tananyag:</h3>
+									<p>Összesített jegyzet elérhető itt:</p> <a href="../teaching/jegyzet.pdf" download="jegyzet.pdf" class="button icon solid fa-download align-right">.PDF</a>
+									<p>Órákra bontva pedig:</p>
+									<ol>
+										<li><a href="/ora1.html">Óra</a></li>
+										<li><a href="/ora2.html">Óra</a></li>
+										<li><a href="/ora3.html">Óra</a></li>
+										<li><a href="/ora4.html">Óra</a></li>
+									</ol>
 									</section>
 
 								</div>
