--- a/teaching/elmecha.html
+++ b/teaching/elmecha.html
@@ -61,7 +61,7 @@
 										<li><a href="/szorg2.html">2. szorgalmi</a></li>
 									</ul>
 									<h3>Tananyag:</h3>
-									<p>Összesített jegyzet elérhető itt: <a href="../teaching/jegyzet.pdf" download="jegyzet.pdf" class="button icon solid fa-download align-right">.PDF</a></p>
+									<p>Összesített jegyzet elérhető itt:&nbsp;&nbsp;&nbsp;&nbsp; <a href="../teaching/jegyzet.pdf" download="jegyzet.pdf" class="button icon solid fa-download align-right">.PDF</a></p>
 									<p>Órákra bontva pedig:</p>
 									<ol>
 										<li><a href="/ora1.html">Óra</a></li>
