--- a/teaching/elmecha.html
+++ b/teaching/elmecha.html
@@ -52,6 +52,11 @@
 									<details>
 									    <summary>Információk</summary>
 									    <p>Itt lesznek az infók, ha lesznek.</p>
+									    <ul>
+										    <li>Határidők</li>
+										    <li>Jegyszerzés</li>
+										    <li>Egyebek</li>
+									    </ul>
 									</details>
 									<h3>Beadandók:</h3>
 									<ul>
@@ -64,10 +69,10 @@
 									<p>Összesített jegyzet elérhető itt:&nbsp;&nbsp;&nbsp;&nbsp; <a href="../teaching/jegyzet.pdf" download="jegyzet.pdf" class="button icon solid fa-download align-right">.PDF</a></p>
 									<p>Órákra bontva pedig:</p>
 									<ol>
-										<li><a href="/ora1.html">Óra</a></li>
-										<li><a href="/ora2.html">Óra</a></li>
-										<li><a href="/ora3.html">Óra</a></li>
-										<li><a href="/ora4.html">Óra</a></li>
+										<li><a href="/ora1.html">Óra - Variáció</a></li>
+										<li><a href="/ora2.html">Óra - Euler-Lagrange</a></li>
+										<li><a href="/ora3.html">Óra - Ciklikus koordináták</a></li>
+										<li><a href="/ora4.html">Óra - Kényszerek</a></li>
 									</ol>
 									</section>
 
