--- a/teaching/elmecha.html
+++ b/teaching/elmecha.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>El.mecha.</title>
+		<title>Elmecha</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
@@ -51,7 +51,36 @@
 									    </h2>
 									<details>
 									    <summary>Információk</summary>
-									    <p>Itt lesznek az infók, ha lesznek.</p>
+									    <p>Időpont: Hétfő 14:00-16:00</p>
+										<p>Helyszín: Északi épület 0.89</p>
+										<details>
+											<summary>A jegyszerzés menete:</summary>
+											<ul>
+											    <li>A gyakorlatra és az előadásra egy közös jegy jár, ennek 2/3 része az előadásból, 1/3 része a gyakból tevódik ki. Elégtelen gyakorlati jegy esetén nincs lehetőség az előadásból vizsgatételre.</li>
+											    <li>A gyakon belül lesz 2 ZH és 2 beadandó, illetve opcionális szorgalmi feladatok. Egy-egy ZH vagy beadandó rendre 50 pontot ér.</li>
+											    <li>A gyakorlati jegyek a következőképp adódnak a pontokból:</li>
+										    </ul>
+											<table>
+												<tr>
+													<td><em>Ponthatár</em></td>
+													<td>0-79</td>
+													<td>80-114</td>
+													<td>115-149</td>
+													<td>150-184</td>
+													<td>185+</td>
+												</tr>
+												<tr>
+													<td><em>Jegy</em></td>
+													<td>1</td>
+													<td>2</td>
+													<td>3</td>
+													<td>4</td>
+													<td>5</td>
+												</tr>
+											</table>
+										
+										</details>
+										
 									    <ul>
 										    <li>Határidők</li>
 										    <li>Jegyszerzés</li>
@@ -69,11 +98,26 @@
 									<p>Összesített jegyzet elérhető itt:&nbsp;&nbsp;&nbsp;&nbsp; <a href="../teaching/jegyzet.pdf" download="jegyzet.pdf" class="button icon solid fa-download align-right">.PDF</a></p>
 									<p>Órákra bontva pedig:</p>
 									<ol>
-										<li><a href="/ora1.html">Óra - Variáció</a></li>
-										<li><a href="/ora2.html">Óra - Euler-Lagrange</a></li>
-										<li><a href="/ora3.html">Óra - Ciklikus koordináták</a></li>
-										<li><a href="/ora4.html">Óra - Kényszerek</a></li>
+										<li><a href="/ora1.html">Óra (09.15.) - Variáció</a></li>
+										<li><a href="/ora2.html">Óra (09.22.)</a></li>
+										<li><a href="/ora3.html">Óra (09.29.)</a></li>
+										<li><a href="/ora4.html">Óra (10.06.)</a></li>
+										<li><a href="/ora5.html">Óra (10.13.)</a></li>
 									</ol>
+									<ul>
+										<li>Első ZH (10.20.)</li>
+										<li>Őszi szünet (10.27.)</li>
+									</ul>
+									<ol start="6">
+										<li><a href="/ora7.html">Óra (11.03.)</a></li>
+										<li><a href="/ora8.html">Óra (11.10.)</a></li>
+										<li><a href="/ora9.html">Óra (11.17.)</a></li>
+										<li><a href="/ora10.html">Óra (11.24.)</a></li>
+									</ol>
+									<ul>
+										<li>Második ZH (12.01.)</li>
+										<li>Utolsó óra (12.08.)</li>
+									</ul>
 									</section>
 
 								</div>
