--- a/teaching/elmecha.html
+++ b/teaching/elmecha.html
@@ -51,10 +51,13 @@
 									    </h2>
 									<details>
 									    <summary>Információk</summary>
-									    <p>Időpont: Hétfő 14:00-16:00</p>
-										<p>Helyszín: Északi épület 0.89</p>
+									    <p>
+											Időpont: Hétfő 14:00-16:00 <br>
+											Helyszín: Északi épület 0.89 <br>
+											A fő kommunikációs csatorna a kurzus Teams csoportja.
+										</p>
 										<details>
-											<summary>A jegyszerzés menete:</summary>
+											<summary>A jegyszerzésről:</summary>
 											<ul>
 											    <li>A gyakorlatra és az előadásra egy közös jegy jár, ennek 2/3 része az előadásból, 1/3 része a gyakból tevódik ki. Elégtelen gyakorlati jegy esetén nincs lehetőség az előadásból vizsgatételre.</li>
 											    <li>A gyakon belül lesz 2 ZH és 2 beadandó, illetve opcionális szorgalmi feladatok. Egy-egy ZH vagy beadandó rendre 50 pontot ér.</li>
@@ -78,14 +81,37 @@
 													<td>5</td>
 												</tr>
 											</table>
-										
 										</details>
-										
-									    <ul>
-										    <li>Határidők</li>
-										    <li>Jegyszerzés</li>
-										    <li>Egyebek</li>
-									    </ul>
+										<details>
+											<summary>A ZH-król:</summary>
+											<ul>
+											    <li>A ZH-kat félév végén lehet pótolni, egy alkalommal, potenciálisan mindkettőt. Javításra van lehetőség, de rontani is: a pótZH felülírja az eredetit. Időpontot az érdeklődőkkel közös megbeszélés alapján választunk</li>
+											    <li>
+													Mindkét ZH-n legalább 40%-ot, azaz 20-20 pontot el kell érni. Ennek hiányában a tárgy elvégzése sikertelen.
+													<ul>
+														<li>Kivétel, hogy ha a hallgató az adott ZH-hoz tartozó szorgalmit leadta, és annak pontjaival együtt már elérte a minimum határt.</li>
+													</ul>
+												</li>
+												<li>A ZH-k tervezett dátuma: Okt. 20. és Dec. 1., a gyak időpontjában és helyszínén.</li>
+										    </ul>
+										</details>
+										<details>
+											<summary>A beadandókról és szorgalmikról:</summary>
+											<ul>
+												<li>A feladatok nem feltétlenül egyszerre kerülnek ki, hanem a hozzájuk kapcsolódó gyakorlatok leadása után valamennyivel.</li>
+												<li>Az első blokk leadási határideje Okt. 19. 23:59, a másodiké pedig Nov. 30. 23:59, tehát a ZH-k előtti napok.</li>
+											</ul>
+										</details>
+										<details>
+											<summary>Ajánlott irodalom:</summary>
+											<ul>
+												<li>Goldstein: Classical Mechanics</li>
+												<li>Taylor: Classical Mechanics</li>
+												<li>Morin: Introduction to Classical Mechanics</li>
+												<li>Kapás Kornél: Elméleti Mechanika A, Feladatsor és gyakorlati anyag (FizWeb)</li>
+											</ul>
+										</details>
+										<p>Az időpontok a félévben történt esetleges komplikációk során módosulhatnak, ezesetben a Teams csoportban lesz felhívva a figyelem a változásra, ha előfordulna.</p>
 									</details>
 									<h3>Beadandók:</h3>
 									<ul>
