--- a/teaching/elmecha.html
+++ b/teaching/elmecha.html
@@ -56,7 +56,7 @@
 											Helyszín: Északi épület 0.89 <br>
 											A fő kommunikációs csatorna a kurzus Teams csoportja.
 										</p>
-										<details>
+										<details style="margin-bottom:1em">
 											<summary>A jegyszerzésről:</summary>
 											<ul>
 											    <li>A gyakorlatra és az előadásra egy közös jegy jár, ennek 2/3 része az előadásból, 1/3 része a gyakból tevódik ki. Elégtelen gyakorlati jegy esetén nincs lehetőség az előadásból vizsgatételre.</li>
@@ -87,19 +87,17 @@
 											<ul>
 											    <li>A ZH-kat félév végén lehet pótolni, egy alkalommal, potenciálisan mindkettőt. Javításra van lehetőség, de rontani is: a pótZH felülírja az eredetit. Időpontot az érdeklődőkkel közös megbeszélés alapján választunk</li>
 											    <li>
-													Mindkét ZH-n legalább 40%-ot, azaz 20-20 pontot el kell érni. Ennek hiányában a tárgy elvégzése sikertelen.
-													<ul>
-														<li>Kivétel, hogy ha a hallgató az adott ZH-hoz tartozó szorgalmit leadta, és annak pontjaival együtt már elérte a minimum határt.</li>
-													</ul>
+													Mindkét ZH-n legalább 40%-ot, azaz 20-20 pontot el kell érni. Ennek hiányában a tárgy elvégzése sikertelen. <br>
+													— Kivétel, hogy ha a hallgató az adott ZH-hoz tartozó szorgalmit leadta, és annak pontjaival együtt már elérte a minimum határt.</li>
 												</li>
-												<li>A ZH-k tervezett dátuma: Okt. 20. és Dec. 1., a gyak időpontjában és helyszínén.</li>
+												<li>A ZH-k tervezett dátuma: <b>Okt. 20.</b> és <b>Dec. 1.</b>, a gyak időpontjában és helyszínén.</li>
 										    </ul>
 										</details>
 										<details>
 											<summary>A beadandókról és szorgalmikról:</summary>
 											<ul>
 												<li>A feladatok nem feltétlenül egyszerre kerülnek ki, hanem a hozzájuk kapcsolódó gyakorlatok leadása után valamennyivel.</li>
-												<li>Az első blokk leadási határideje Okt. 19. 23:59, a másodiké pedig Nov. 30. 23:59, tehát a ZH-k előtti napok.</li>
+												<li>Az első blokk leadási határideje <b>Okt. 19. 23:59</b>, a másodiké pedig <b>Nov. 30. 23:59</b>, tehát a ZH-k előtti napok.</li>
 											</ul>
 										</details>
 										<details>
@@ -115,35 +113,34 @@
 									</details>
 									<h3>Beadandók:</h3>
 									<ul>
-										<li><a href="/bead1.html">1. beadandó</a></li>
-										<li><a href="/szorg1.html">1. szorgalmi</a></li>
-										<li><a href="/bead2.html">2. beadandó</a></li>
-										<li><a href="/szorg2.html">2. szorgalmi</a></li>
+										<li>1. beadandó</li>
+										<li>1. szorgalmi</li>
+										<li>2. beadandó</li>
+										<li>2. szorgalmi</li>
 									</ul>
 									<h3>Tananyag:</h3>
-									<p>Összesített jegyzet elérhető itt:&nbsp;&nbsp;&nbsp;&nbsp; <a href="../teaching/jegyzet.pdf" download="jegyzet.pdf" class="button icon solid fa-download align-right">.PDF</a></p>
-									<p>Órákra bontva pedig:</p>
 									<ol>
 										<li><a href="/ora1.html">Óra (09.15.) - Variáció</a></li>
-										<li><a href="/ora2.html">Óra (09.22.)</a></li>
-										<li><a href="/ora3.html">Óra (09.29.)</a></li>
-										<li><a href="/ora4.html">Óra (10.06.)</a></li>
-										<li><a href="/ora5.html">Óra (10.13.)</a></li>
+										<li>Óra (09.22.)</li>
+										<li>Óra (09.29.)</li>
+										<li>Óra (10.06.)</li>
+										<li>Óra (10.13.)</li>
 									</ol>
 									<ul>
 										<li>Első ZH (10.20.)</li>
 										<li>Őszi szünet (10.27.)</li>
 									</ul>
 									<ol start="6">
-										<li><a href="/ora7.html">Óra (11.03.)</a></li>
-										<li><a href="/ora8.html">Óra (11.10.)</a></li>
-										<li><a href="/ora9.html">Óra (11.17.)</a></li>
-										<li><a href="/ora10.html">Óra (11.24.)</a></li>
+										<li>Óra (11.03.)</li>
+										<li>Óra (11.10.)</li>
+										<li>Óra (11.17.)</li>
+										<li>Óra (11.24.)</li>
 									</ol>
 									<ul>
 										<li>Második ZH (12.01.)</li>
 										<li>Utolsó óra (12.08.)</li>
 									</ul>
+									<p>A tavalyi összesített jegyzet elérhető itt:&nbsp;&nbsp;&nbsp;&nbsp; <a href="../teaching/elmecha_jegyzet.pdf" download="elmecha_jegyzet.pdf" class="button icon solid fa-download align-right"></a></p>
 									</section>
 
 								</div>
