--- a/teaching/elmecha.html
+++ b/teaching/elmecha.html
@@ -49,14 +49,14 @@
 									    <h2 class="major">
 										    Elméleti Mechanika (A) gyakorlat (2025)
 									    </h2>
-									<details>
+									<details style="margin-bottom:1em">
 									    <summary>Információk</summary>
 									    <p>
 											Időpont: Hétfő 14:00-16:00 <br>
 											Helyszín: Északi épület 0.89 <br>
 											A fő kommunikációs csatorna a kurzus Teams csoportja.
 										</p>
-										<details style="margin-bottom:1em">
+										<details>
 											<summary>A jegyszerzésről:</summary>
 											<ul>
 											    <li>A gyakorlatra és az előadásra egy közös jegy jár, ennek 2/3 része az előadásból, 1/3 része a gyakból tevódik ki. Elégtelen gyakorlati jegy esetén nincs lehetőség az előadásból vizsgatételre.</li>
@@ -120,7 +120,7 @@
 									</ul>
 									<h3>Tananyag:</h3>
 									<ol>
-										<li><a href="/ora1.html">Óra (09.15.) - Variáció</a></li>
+										<li><a href="/elmecha/ora1.html">Óra (09.15.) - Variáció</a></li>
 										<li>Óra (09.22.)</li>
 										<li>Óra (09.29.)</li>
 										<li>Óra (10.06.)</li>
@@ -140,7 +140,7 @@
 										<li>Második ZH (12.01.)</li>
 										<li>Utolsó óra (12.08.)</li>
 									</ul>
-									<p>A tavalyi összesített jegyzet elérhető itt:&nbsp;&nbsp;&nbsp;&nbsp; <a href="../teaching/elmecha_jegyzet.pdf" download="elmecha_jegyzet.pdf" class="button icon solid fa-download align-right"></a></p>
+									<p>A tavalyi összesített jegyzet elérhető itt:&nbsp;&nbsp;&nbsp;&nbsp; <a href="../teaching/elmecha_jegyzet.pdf" download="elmecha_jegyzet.pdf" class="button icon solid fa-download align-left">&nbsp;&nbsp;&nbsp;</a></p>
 									</section>
 
 								</div>
