--- a/teaching-hu.html
+++ b/teaching-hu.html
@@ -42,7 +42,7 @@
 					<section id="banner">
 						<div class="inner">
 							<!-- <div class="logo"><span class="icon fa-gem"></span></div> -->
-							<h2>"The greater the difficulty, the more the glory in surmounting it."</h2>
+							<h2>"When the principal points have been well grasped and remembered, exact knowledge in all its details will be discovered."</h2>
 							<p style="text-align: right;"> - Epicurus</p>
 						</div>
 					</section>
