--- a/teaching/elmecha/ora1.html
+++ b/teaching/elmecha/ora1.html
@@ -1,1 +1,103 @@
-Itt lesz majd az első óra.
+<!DOCTYPE HTML>
+<!--
+	Solid State by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Elmecha</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="../assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
+    <!-- For LaTeX translation I use KeTeX -->
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.0/dist/katex.min.css">
+		<script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.0/dist/katex.min.js"></script>
+		<script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.0/dist/contrib/auto-render.min.js" onload="renderMathInElement(document.body)"></script>
+	</head>
+	<body class="is-preload subpage teachpage">
+
+		<!-- Page Wrapper -->
+			<div id="page-wrapper">
+
+				<!-- Header -->
+					<header id="header">
+						<h1><a href="../teaching/elmecha.html">Elmecha</a></h1>
+						<nav>
+							<a href="#menu"></a>
+						</nav>
+					</header>
+
+				<!-- Menu -->
+					<nav id="menu">
+						<div class="inner">
+							<ul class="links">
+								<li><a href="../index-hu.html">Home</a></li>
+								<li><a href="../cv-hu.html">CV</a></li>
+								<li><a href="../teaching-hu.html">Oktatás</a></li>
+							</ul>
+							<a href="#" class="close">Close</a>
+						</div>
+					</nav>
+
+
+				<!-- Wrapper -->
+					<section id="wrapper">
+
+						<!-- Content -->
+							<div class="wrapper">
+								<div class="inner">
+
+									<section>
+									    <h2 class="major">
+										    1. óra
+									    </h2>
+							        <p>Az előadáson eljutottunk két fontos elvhez:</p>
+                      <p>
+                        \( \displaystyle
+                           \mathcal{S}_0 = \int |\vec{p}|\,\mathrm{d}s 
+                           \quad 
+                           \mathcal{T} = \int n(s)\,\mathrm{d}s
+                        \)
+                      </p>
+                      <p>amikről nagyjából beláttuk, hogy azonosak. A Fermat elvet már ismeritek, és levezettétek belőle a Snellius-Descartes törvényt, miszerint fénytörés esetén a beesési szögek és a törésmutatók közti összefüggés:</p>
+									</section>
+
+								</div>
+							</div>
+
+					</section>
+
+				<!-- Footer -->
+					<section id="footer">
+						<div class="inner">
+							<h2 class="major">Elérhetőség</h2>
+							<ul class="contact">
+								<li class="icon solid fa-home">
+									ELTE TTK<br />
+									Elméleti Fizikai Tanszék<br />
+									Szoba: 6.101A
+								</li>
+							</ul>
+							<ul class="contact">
+								<li class="icon solid fa-envelope"><a href="mailto:szabolcs.kovacs.uni@gmail.com">szabolcs.kovacs.uni@gmail.com</a></li>
+							</ul>
+							<ul class="copyright">
+								<li>Hosted on GitHub Pages</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Background: teplovodoserviss from Wallpapers.com</li>
+							</ul>
+						</div>
+					</section>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="../assets/js/jquery.min.js"></script>
+			<script src="../assets/js/jquery.scrollex.min.js"></script>
+			<script src="../assets/js/browser.min.js"></script>
+			<script src="../assets/js/breakpoints.min.js"></script>
+			<script src="../assets/js/util.js"></script>
+			<script src="../assets/js/main.js"></script>
+
+	</body>
+</html>
