--- a/teaching/elmecha/ora1.html
+++ b/teaching/elmecha/ora1.html
@@ -14,8 +14,8 @@
 
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="../assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="../../assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="../../assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload subpage teachpage">
 
@@ -24,7 +24,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="../teaching/elmecha.html">Elmecha</a></h1>
+						<h1><a href="../elmecha.html">Elmecha</a></h1>
 						<nav>
 							<a href="#menu"></a>
 						</nav>
@@ -34,9 +34,9 @@
 					<nav id="menu">
 						<div class="inner">
 							<ul class="links">
-								<li><a href="../index-hu.html">Home</a></li>
-								<li><a href="../cv-hu.html">CV</a></li>
-								<li><a href="../teaching-hu.html">Oktatás</a></li>
+								<li><a href="../../index-hu.html">Home</a></li>
+								<li><a href="../../cv-hu.html">CV</a></li>
+								<li><a href="../../teaching-hu.html">Oktatás</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -93,12 +93,12 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="../assets/js/jquery.min.js"></script>
-			<script src="../assets/js/jquery.scrollex.min.js"></script>
-			<script src="../assets/js/browser.min.js"></script>
-			<script src="../assets/js/breakpoints.min.js"></script>
-			<script src="../assets/js/util.js"></script>
-			<script src="../assets/js/main.js"></script>
+			<script src="../../assets/js/jquery.min.js"></script>
+			<script src="../../assets/js/jquery.scrollex.min.js"></script>
+			<script src="../../assets/js/browser.min.js"></script>
+			<script src="../../assets/js/breakpoints.min.js"></script>
+			<script src="../../assets/js/util.js"></script>
+			<script src="../../assets/js/main.js"></script>
 
 	</body>
 </html>
