--- a/teaching/elmecha.html
+++ b/teaching/elmecha.html
@@ -120,7 +120,10 @@
 									</ul>
 									<h3>Tananyag:</h3>
 									<ol>
+										<!--
 										<li><a href="../teaching/elmecha/ora1.html">Óra (09.15.) - Variáció</a></li>
+										-->
+										<li>Óra (09.15.)</li>
 										<li>Óra (09.22.)</li>
 										<li>Óra (09.29.)</li>
 										<li>Óra (10.06.)</li>
