--- a/teaching/elmecha/ora1.html
+++ b/teaching/elmecha/ora1.html
@@ -54,6 +54,33 @@
 									    <h2 class="major">
 										    1. óra
 									    </h2>
+										<h3>Minimumelvek</h3>
+
+										<p>
+											Az óra célja röviden az, hogy megismerkedjünk a variációs módszerekkel.
+											Ez gyakorlatilag egy új nyelv, amire az eddig megszokotthoz (rajzolni egy diagramot az erőkkel, aztán $\Vec{F}=m\Vec{a}$) hasonlóan le lehet fordítani azt, hogy mi történik a világban.
+											Az előnye az, hogy általában sokkal könnyebb felírni így a mozgást leíró egyenleteket, mégha megoldani nem is mindig lehet azokat.
+											Mellékesen pedig ezen a nyelven lesz olvasható a későbbiekben két egész fontos ága a tudományunknak: a kvantumfizika és az általános relativitáselmélet.
+										</p>
+										<p>
+											Mechanikáról léve szó, azt szeretnénk megtudni, hogy hogyan jutunk el valamilyen $A$ pontból a $B$-be.
+											Ezt sokféle úton lehetne megtenni, sok féle $\Gamma$ görbén; amik mentén változhat a "fizika" valamilyen (egyelőre) ismeretlen $f$ függvények által kódolva.
+											A függvények és a görbék relatíve bonyolult dolgok, ezért keressünk valami egyszerűbbet, mondjuk egy számot amit hívjunk $\mathcal{S}$-nek.
+											Hogy ez is kódolja az összes eddigi információt, legyen absztraktul
+											\(
+												\mathcal{S} = \mathcal{S}[f(\Gamma)]
+											\)
+											Ami nevesítve azt mondja, hogy $\mathcal{S}$ egy funkcionál: ahogyan egy $f$ függvény (\textit{function}) egy számhoz hozzárendel egy másikat, az $\mathcal{S}$ funkcionál egy függvényhez rendel hozzá egy számot.
+										</p>
+										<p>
+											A fizika ott kezdődik, hogy eközül a sok út közül csak egy lehet reális: az alma nem keringőzik a levegőben, hanem leesik.
+											Kitüntetett szerepe annak az útnak lesz, ahol ez az $\mathcal{S}$ hatás alig változik: extrémuma van.
+											A legkisebb hatás elve szerint tehát az lesz a fizikailag megvalósuló pálya, amelynek mentén
+											\(
+												\delta \mathcal{S} = 0
+											\)
+										</p>
+										
 									<!--
 							        <p>Az előadáson eljutottunk két fontos elvhez:</p>
 									<p>
